Fix spacing of projects section

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -154,7 +154,7 @@
 
 .projectContainer {
     padding-bottom: 0rem;
-    height: 145rem;
+    height: 143rem;
 }
 
 .projectSection {
@@ -285,7 +285,7 @@
 
     .projectContainer {
         padding-bottom: 0rem;
-        height: 130rem;
+        height: 140rem;
     }
 
     .projectFlexDiv {
